--- a/src/views/room.ejs
+++ b/src/views/room.ejs
@@ -12,6 +12,10 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
+        <!---SCRIPT-->
+        <script src="scripts/main.js" defer type="module"></script>
+    
+    
     </head>
 
     <body>
@@ -154,7 +158,7 @@
                     <label class="sr-only" for-id="password">Digite sua senha admin</label>
                     <input type="password" name="password" placeholder="Digite sua senha" />
                     <div class="buttons">
-                        <div class="button grey">Cancelar</div>
+                        <div class="button grey cancel">Cancelar</div>
                         <button class="red">Sim, excluir</button>
                     </div>
                 </form>
