--- a/src/views/room.ejs
+++ b/src/views/room.ejs
@@ -26,7 +26,7 @@
                 </a>
                 
                 <div class="buttons">
-                    <div class="button outlined">
+                    <div class="button outlined" id="room-id" data-id="323243">
                         #323243
                         <img src="assets/images/copy.svg" alt="Copiar numero da sala"/>
                     </div>
@@ -66,11 +66,11 @@
                                 </div> 
                             </div>
                             <div class="actions">
-                                <a href="#" class="check">
+                                <a href="#" class="check" data-id="2">
                                     <img src="assets/images/check.svg" alt="marcar como lida">
                                     Marcar como lida
                                 </a>
-                                <a href="#" class="delete">
+                                <a href="#" class="delete" data-id="2">
                                     <img src="assets/images/trash.svg" alt="excluir">
                                     Excluir
                                 </a>
@@ -87,11 +87,11 @@
                                 </div> 
                             </div>
                             <div class="actions">
-                                <a href="#" class="check">
+                                <a href="#" class="check" data-id="3">
                                     <img src="assets/images/check.svg" alt="marcar como lida">
                                     Marcar como lida
                                 </a>
-                                <a href="#" class="delete">
+                                <a href="#" class="delete" data-id="3">
                                     <img src="assets/images/trash.svg" alt="excluir">
                                     Excluir
                                 </a>
@@ -115,11 +115,11 @@
                                 </div> 
                             </div>
                             <div class="actions">
-                                <a href="#" class="check">
+                                <a href="#" class="check" data-id="4">
                                     <img src="assets/images/check.svg" alt="marcar como lida">
                                     Marcar como lida
                                 </a>
-                                <a href="#" class="delete">
+                                <a href="#" class="delete" data-id="4">
                                     <img src="assets/images/trash.svg" alt="excluir">
                                     Excluir
                                 </a>
@@ -136,7 +136,7 @@
                                 </div> 
                             </div>
                             <div class="actions">
-                                <a href="#" class="delete">
+                                <a href="#" class="delete" data-id="1">
                                     <img src="assets/images/trash.svg" alt="excluir">
                                     Excluir
                                 </a>
@@ -154,7 +154,7 @@
                 <h2>Excluir pergunta</h2>
                 <p>Tem certeza que você deseja excluir esta pergunta?</p>
 
-                <form action="#">
+                <form action="#" method="POST">
                     <label class="sr-only" for-id="password">Digite sua senha admin</label>
                     <input type="password" name="password" placeholder="Digite sua senha" />
                     <div class="buttons">
