--- a/src/views/room.ejs
+++ b/src/views/room.ejs
@@ -26,8 +26,8 @@
                 </a>
                 
                 <div class="buttons">
-                    <div class="button outlined" id="room-id" data-id="323243">
-                        #323243
+                    <div class="button outlined" id="room-id" data-id="<%= roomId %>">
+                        #<%= roomId %>
                         <img src="/images/copy.svg" alt="Copiar numero da sala"/>
                     </div>
                     <a href="#" class="button">
@@ -40,7 +40,7 @@
             <main>
                 <section id="question-form">
                     <h2>Faça sua pergunta</h2>
-                    <form action="">
+                    <form action="/question/create/<%= roomId %>" method="POST">
                         <label class="sr-only" for-id="question">O que você quer perguntar?</label>
                         <textarea name="question" id="question" placeholder="O que você quer perguntar?"></textarea>
                         <footer>
@@ -56,75 +56,34 @@
                     <h2 class="sr-only">Perguntas da comunidade</h2>
                     <div class="questions">
 
-                        <div class="question-wrapper">
-                            <div class="question-content">
-                                <div class="user">
-                                    <img src="/images/user.svg" alt="icone avatar">
-                                </div>  
-                                <div class="question">
-                                    <p>Qual a diferença entre const, let e var em js?</p>
-                                </div> 
-                            </div>
-                            <div class="actions">
-                                <a href="#" class="check" data-id="2">
-                                    <img src="/images/check.svg" alt="marcar como lida">
-                                    Marcar como lida
-                                </a>
-                                <a href="#" class="delete" data-id="2">
-                                    <img src="/images/trash.svg" alt="excluir">
-                                    Excluir
-                                </a>
-                            </div>
-                        </div>
+                        <% questions.forEach(question => { %>
 
-                        <div class="question-wrapper">
-                            <div class="question-content">
-                                <div class="user">
-                                    <img src="/images/user.svg" alt="icone avatar">
-                                </div>  
-                                <div class="question">
-                                    <p>O que é JavaScript?</p>
-                                </div> 
-                            </div>
-                            <div class="actions">
-                                <a href="#" class="check" data-id="3">
-                                    <img src="/images/check.svg" alt="marcar como lida">
-                                    Marcar como lida
-                                </a>
-                                <a href="#" class="delete" data-id="3">
-                                    <img src="/images/trash.svg" alt="excluir">
-                                    Excluir
-                                </a>
-                            </div>
-                        </div>
 
-                        <div class="question-wrapper">
-                            <div class="question-content">
-                                <div class="user">
-                                    <img src="/images/user.svg" alt="icone avatar">
-                                </div>  
-                                <div class="question">
-                                    <p>
-                                        Você já sabe quais as bases precisa melhorar para alcançar o seu próximo nível 
-                                        com maestria? Esta é uma pergunta grande Esta é uma pergunta 
-                                        grandeEsta é uma pergunta grandeEsta é uma pergunta grandeEsta 
-                                        é uma pergunta grandeEsta é uma pergunta grandeEsta é uma pergunta 
-                                        
-                                        grande Esta é uma pergunta grandeEsta é uma pergunta grandeEsta é uma pergunta grandeEsta é uma pergunta grandeEsta é uma pergunta grandeEsta é uma pergunta grandeEsta é uma pergunta grandeEsta é uma pergunta grandeEsta é uma pergunta grandeEsta é uma pergunta grandeEsta é uma pergunta grandeEsta é uma pergunta grandeEsta é uma pergunta grandeEsta é uma pergunta grandeEsta é uma pergunta grande
-                                    </p>
-                                </div> 
+                            <div class="question-wrapper">
+                                <div class="question-content">
+                                    <div class="user">
+                                        <img src="/images/user.svg" alt="icone avatar">
+                                    </div>  
+                                    <div class="question">
+                                        <p><%=question.title%></p>
+                                    </div> 
+                                </div>
+                                <div class="actions">
+                                    <a href="#" class="check" data-id="<%=question.id%>">
+                                        <img src="/images/check.svg" alt="marcar como lida">
+                                        Marcar como lida
+                                    </a>
+                                    <a href="#" class="delete" data-id="<%%=question.id>">
+                                        <img src="/images/trash.svg" alt="excluir">
+                                        Excluir
+                                    </a>
+                                </div>
                             </div>
-                            <div class="actions">
-                                <a href="#" class="check" data-id="4">
-                                    <img src="/images/check.svg" alt="marcar como lida">
-                                    Marcar como lida
-                                </a>
-                                <a href="#" class="delete" data-id="4">
-                                    <img src="/images/trash.svg" alt="excluir">
-                                    Excluir
-                                </a>
-                            </div>
-                        </div>
+
+                            
+                        <% }); %>
+                     
+                        <% questionsRead.forEach(questionRead => {%>
 
                         <div class="question-wrapper read">
                             <div class="question-content">
@@ -132,16 +91,19 @@
                                     <img src="/images/user.svg" alt="icone avatar">
                                 </div>  
                                 <div class="question">
-                                    <p>O que é Typerscript?</p>
+                                    <p><%= questionRead.title %></p>
                                 </div> 
                             </div>
                             <div class="actions">
-                                <a href="#" class="delete" data-id="1">
+                                <a href="#" class="delete" data-id="<%=questionRead.id%>">
                                     <img src="/images/trash.svg" alt="excluir">
                                     Excluir
                                 </a>
                             </div>
                         </div>
+
+                        <% }); %>
+                        
 
                     </div>
                 </section>
