--- a/src/views/room.ejs
+++ b/src/views/room.ejs
@@ -30,7 +30,7 @@
                         #<%= roomId %>
                         <img src="/images/copy.svg" alt="Copiar numero da sala"/>
                     </div>
-                    <a href="#" class="button">
+                    <a href="/create-pass" class="button">
                         <img src="/images/users-white.svg" alt="Criar uma sala">
                         Criar sala
                     </a>
@@ -73,7 +73,7 @@
                                         <img src="/images/check.svg" alt="marcar como lida">
                                         Marcar como lida
                                     </a>
-                                    <a href="#" class="delete" data-id="<%%=question.id>">
+                                    <a href="#" class="delete" data-id="<%=question.id%>">
                                         <img src="/images/trash.svg" alt="excluir">
                                         Excluir
                                     </a>
@@ -83,7 +83,7 @@
                             
                         <% }); %>
                      
-                        <% questionsRead.forEach(questionRead => {%>
+                        <% questionsRead.forEach(questionRead => { %>
 
                         <div class="question-wrapper read">
                             <div class="question-content">
