--- a/src/views/parts/enter-room.ejs
+++ b/src/views/parts/enter-room.ejs
@@ -1,6 +1,6 @@
 <section>
     <h2>Entre como participante</h2>
-    <form action="/enterroom" mehtod="POST">
+    <form action="/enterroom" method="POST">
         <label class="sr-only" for="room-id">Código da sala</label>
         <input name="roomId" type="number" id="room-id" placeholder="Código da sala">
         <button>
