--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -7,20 +7,6 @@
     'header header'
     'left right'
 }
-/*
-@media(max-width: 576px) {
-    .content{
-        margin-right: 2rem ;
-        grid-template-columns: 5% 95%;
-        grid-template-areas:
-         'header header'
-         'left right'; 
-    }
-    
-    
-}
-*/
-
 
 header{
     grid-area: header;
@@ -105,4 +91,43 @@ input, button, .button{
 .ball.bottom{
     bottom: -15rem;
     right: 5.6rem;
+}
+
+@media(max-width: 576px) {
+    .content{
+       display: flex;
+       flex-direction: column;
+       justify-content: center;
+       overflow: hidden;
+       width: 100%
+      
+    } 
+    header{
+         display: flex;
+         flex-direction: row;
+         justify-content: center;
+    }
+
+    main .container{
+        margin-left: 2rem;
+        margin-right: 2rem;
+        padding-top: 10rem;
+        align-items: center;
+        justify-content: center;
+        
+    }
+
+    main h2{
+        display: flex;
+        justify-content: center;
+    }
+
+}
+
+@media(max-width: 768px) {
+    
+    main .container{
+        margin-right: 3rem;
+    } 
+    
 }
