--- a/public/styles/modal.css
+++ b/public/styles/modal.css
@@ -60,3 +60,34 @@
 .modal-wrapper .modal .buttons > .button{
     padding: 1.3rem 3.2rem;
 }
+
+@media(max-width: 576px){
+
+    .modal-wrapper .modal{
+        padding: 2rem;
+    }
+    
+    .modal-wrapper .modal .buttons{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        
+    }
+
+
+    .modal-wrapper .modal .buttons > button,
+    .modal-wrapper .modal .buttons > .button{
+        margin-top: 1rem;
+        
+    
+    
+    }
+
+    .modal-wrapper .modal input{
+        margin-bottom: 2rem; 
+       
+    }
+
+
+}
