novas telas e dependências

--- a/src/views/parts/enter-room.ejs
+++ b/src/views/parts/enter-room.ejs
@@ -22,4 +22,9 @@
         <img src="/images/users.svg" alt="Criar Sala"> 
         Criar Sala
     </a>
+    <a href="#" class='button'>
+        <img src="/images/enter-room.svg" alt="Minhas Salas">
+        Minhas Salas
+    </a>
 </section>
+
