--- a/src/views/signup.ejs
+++ b/src/views/signup.ejs
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
     <head>
-        <title>Rocket.Q - Login</title>
+        <title>Cadastro - Rocket.Q</title>
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- #CSS-->
         <link rel="stylesheet" href="/styles/global.css">
-        <link rel="stylesheet" href="/styles/login.css">
+        <link rel="stylesheet" href="/styles/signup.css">
         <!-- FONTS-->
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@500;700&display=swap" rel="stylesheet">
     </head>
     <body>
-        <div id="login" class="content">
+        <div id="signup" class= "content">
             <header>
                 <a href="/">
                      <img src="/images/logo.svg" alt="Rocket.Q Logo"/>
@@ -21,39 +21,31 @@
              </header>
 
              <div id="bg">
-                
+                <div class="ball top"></div>
+                <div class="ball bottom"></div>
             </div>
 
-            <main>
-                <div class="container">
+             <main>
+                 <div class="container">
+
                     <section>
-                        <h2>Faça seu login:</h2>
+                        <h2>Faça seu cadastro</h2>
                         <form>
+                            <label class="sr-only" for="name">Seu nome</label>
+                            <input name="name" type="text" id="name" placeholder="Seu nome">
                             <label class="sr-only" for="email">Entre com seu e-mail:</label>
                             <input name="email" type="email" id="email" placeholder="exemplo@email.com">
                             <label class="sr-only" for="senha">Senha</label>
                             <input name="password" type="password" id="senha" placeholder="Senha">
                             <button>
-                                <img src="/images/enter-room.svg" alt="Entrar">
-                                Entrar
+                                <img src="/images/enter-room.svg" alt="Entrar na Sala">
+                                Cadastrar
                             </button>
                         </form>
                     </section>
 
-                    <div class="separator">
-                        <div></div>
-                        <div>ou</div>
-                        <div></div>
-                    </div>
-
-                    <a href="/signup" class='button'>
-                        <img src="/images/users-white.svg" alt="Cadastrar"> 
-                        Cadastrar nova conta
-                    </a>
-
-                </div>
-            </main>
+                 </div>
+             </main>
         </div>
     </body>
-
 </html>
